@@ -4,8 +4,22 @@
 
 import execnet
 import py
+from execnet.gateway_base import Channel
 
 class TestMultiChannelAndGateway:
+    def test_multichannel_container_basics(self):
+        mch = execnet.MultiChannel([Channel(None, i) for i in range(3)])
+        assert len(mch) == 3
+        channels = list(mch)
+        assert len(channels) == 3
+        # ordering
+        for i in range(3):
+            assert channels[i].id == i
+            assert channels[i] == mch[i]
+        assert channels[0] in mch
+        assert channels[1] in mch
+        assert channels[2] in mch
+        
     def test_multichannel_receive_each(self):
         class pseudochannel:
             def receive(self):
